tests/istio_testcases/example_policies/testcase1/testcase1-allow-all-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: default
spec:
  action: ALLOW
  # This matches everything.
  rules:
  - {}  #  An empty rule is always matched.
