tests/istio_testcases/example_policies/testcase1/testcase1-allow-all-test-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-all
 namespace: default
spec:
 rules:
 - {}
