tests/istio_testcases/example_policies/testcase1/testcase1-copy-istio-scheme.yaml
namespaceList: ../../../k8s_testcases/example_podlist/ns_list.json
podList: ../../../k8s_testcases/example_podlist/pods_list.json

networkConfigList:
  - name: istio1
    networkPolicyList:
      - testcase1-policy.yaml
    expectedWarnings: 1

  - name: istio2
    networkPolicyList:
      - testcase1-new-policy.yaml
    expectedWarnings: 0

  - name: allow-all
    networkPolicyList:
      - testcase1-allow-all-policy.yaml
    expectedWarnings: 0

  - name: test-redundant-rule
    networkPolicyList:
      - testcase1-redundant-rule.yaml
    expectedWarnings: 0

  - name: test-sanity-1
    networkPolicyList:
      - testcase1-sanity-test.yaml
    expectedWarnings: 0

  - name: test-sanity-2
    networkPolicyList:
      - testcase1-sanity-test-2.yaml
    expectedWarnings: 2

  - name: test-sanity-3
    networkPolicyList:
      - testcase1-sanity-test-3.yaml
    expectedWarnings: 0

  - name: test-sanity-4
    networkPolicyList:
      - testcase1-sanity-test-4.yaml
    expectedWarnings: 0

  - name: test-sanity-5
    networkPolicyList:
      - testcase1-sanity-test-5.yaml
    expectedWarnings: 0

  - name: allow-nothing
    networkPolicyList:
      - testcase1-allow-nothing-policy.yaml
    expectedWarnings: 0

  - name: allow-nothing-2
    networkPolicyList:
      - testcase1-allow-nothing-policy-2.yaml
    expectedWarnings: 0

  - name: deny-all
    networkPolicyList:
      - testcase1-deny-all-policy.yaml




queries:
  - name: istio1_policy
    sanity:
      - istio1
    expected: 2

  - name: allow-all-vacuity
    vacuity:
      - allow-all
    expected: 1

  - name: redundancy-test
    redundancy:
      - test-redundant-rule
    expected: 2

  - name: sanity-test-1
    sanity:
      - test-sanity-1
    expected: 1

  - name: equiv-test-1
    equivalence:
      - allow-nothing
      - deny-all
      - allow-nothing-2
    expected: 0

  - name: equiv-test-2
    equivalence:
      - istio1
      - istio2
    expected: 1

  - name: semantic-diff-test-2
    semanticDiff:
      - istio1
      - istio2
    expected: 4
    outputConfiguration:
      fwRulesGroupByLabelSinglePod: true

  - name: two-way-containment
    twoWayContainment:
      - istio1
      - istio2
    expected: 0

  - name: connectivity-istio1
    connectivityMap:
      - istio1
      - istio2
    expected: 0
    outputConfiguration:
      fwRulesGroupByLabelSinglePod: true

  - name: sanity-test-2
    sanity:
      - test-sanity-2
    expected: 1

  - name: sanity-test-3
    sanity:
      - test-sanity-3
    expected: 1

  - name: sanity-test-4
    sanity:
      - test-sanity-4
    expected: 1

  - name: sanity-test-5
    sanity:
      - test-sanity-5
    expected: 1
