tests/istio_testcases/example_policies/testcase1/testcase1-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-allow
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - from:
    - source:
        namespaces: ["vendor-system", "default"]
    - source:
        ipBlocks: ["1.2.3.0/24", "2.2.2.2", "f200:8000::/32", "8f00::ffff"]
    to:
    - operation:
        ports: ["26257", "30"]
    when:
    - key: destination.port
      values: ["26257"]
    #- key: source.namespace
    #  values: ["default"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-deny
  namespace: default
spec:
  action: DENY
  selector:
    matchLabels:
      app: skydive
  rules:
  - from:
    - source:
        ipBlocks: ["2.2.2.2", "8f00::ffff"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-deny-nothing
  namespace: vendor-system
spec:
  action: DENY
  rules:
  - from:
    - source:
        namespaces: []
        notNamespaces: ["default"]
