tests/istio_testcases/example_policies/testcase1/testcase1-redundant-rule.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-allow-redundant-rule
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - from:
    - source:
        namespaces: ["vendor-system", "default"]
    - source:
        ipBlocks: ["1.2.3.0/24", "2.2.2.2"]
    to:
    - operation:
        ports: ["26257", "30"]
    when:
    - key: destination.port
      values: ["26257"]

  - from:
    - source:
        namespaces: ["vendor-system", "default"]
    - source:
        ipBlocks: ["1.2.3.0/24", "2.2.2.2"]
    to:
    - operation:
        ports: ["26257"]
