tests/istio_testcases/example_policies/testcase1/testcase1-sanity-test-5.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-allow-sanity
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: skydive
  rules:
  - from:
    - source:
        namespaces: ["vendor-system", "default"]
    - source:
        ipBlocks: ["1.2.3.0/24", "2.2.2.2", "f200:8000::/32", "8f00::ffff"]
    to:
    - operation:
        ports: ["26257", "30"]
    when:
    - key: destination.port
      values: ["26257"]

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-deny-sanity-1
  namespace: default
spec:
  action: DENY
  rules:
  - from:
    - source:
        namespaces: ["vendor-system", "default"]
    to:
    - operation:
        ports: ["26257"]

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-deny-sanity-2
  namespace: default
spec:
  action: DENY
  rules:
  - from:
    - source:
        ipBlocks: ["1.2.3.0/24", "2.2.2.2", "f200:8000::/32", "8f00::ffff"]
    to:
    - operation:
        ports: ["26257"]
